--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         const omega = Math.PI / 9 //--> angular velocity (meters / sec)
         const dt = 10 // length of each interval, measured in ms
 
+        const pop_sound = new Audio('pop.mp3')
+
         let d_theta = ((dt / 1000) * omega); //--> tiny change in angle theta over dt converted to sec (millisec * 10^-3 --> sec)
         
         var theta = (Math.PI / 6); //--> arbitrary initial angle within the range (0, pi/2)
@@ -63,10 +65,12 @@
             }
 
             if (theta >= alpha) {
+                pop_sound.play()
                 d_theta *= -1;
                 beta = (Math.random() * (Math.PI / 2));
             }
             if (theta <= beta) {
+                pop_sound.play()
                 d_theta *= -1;
                 alpha = (Math.random() * (Math.PI / 2)) + (Math.PI / 2);
             }
