--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body style="background-color: black; overflow: hidden; background-image: url(webg.png);">
 
-    <div style="background-image: repeating-linear-gradient(0deg, rgba(0, 0, 0, .01), #1f1f1fab 2px, rgba(255, 255, 255, .1) 2px); background-size: cover; background-position: center; width: 100vw; height: 100vh; pointer-events: none;"></div>
+    <div style="position: absolute; background-image: repeating-linear-gradient(0deg, rgba(0, 0, 0, .01), #1f1f1fab 2px, rgba(255, 255, 255, .1) 2px); background-size: cover; background-position: center; width: 100vw; height: 100vh; pointer-events: none;"></div>
 
     <div class="content" style="border-radius: 2px; position: absolute; transform: translate(-50%, -50%); left: 50%; top: 50%; height: 482px; width: 660px; color: white; background-image: linear-gradient(#808080f2, rgba(255, 255, 255, .9)); overflow: hidden; z-index: -3;"><div class="txt" style="opacity: .5; animation: blink 5.0s ease-out infinite; text-align: center; padding-top: 10px;"><span style="color: blue;">&LeftAngleBracket;</span>&thinsp;THIS IS CALLED: ERR.. <em>CIRCULAR</em>... PONG???&thinsp;<span style="color: blue;">&RightAngleBracket;</span></div></div>
     
